tela home iniciada

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -3,6 +3,6 @@
   background-color: #141414;
   height: 100vh;
 
-  padding: 0 2.75rem;
-  overflow-y: scroll;
+  padding: 0 3.25rem;
+  overflow-y: auto;
 }
