--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,8 @@
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-li {
+li,
+a {
   list-style: none;
   color: rgb(163, 162, 162);
 }
