--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -2,10 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-color: #000;
+
+  max-width: 250px;
   padding: 4rem;
   flex: 1;
 
+  background-color: #000;
   color: white;
 
   ul {
