--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -27,3 +27,22 @@
     border-radius: 5%;
   }
 }
+
+.card-artist {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
+  width: 250px;
+  padding: 1.5rem 1rem;
+  background-color: #202020;
+  color: #fff;
+  border-radius: 5%;
+
+  img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+  }
+}
