--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -2,9 +2,16 @@
   display: flex;
   gap: 2rem;
 
+  @media (max-width: 992px) {
+    justify-content: center;
+  }
   flex-wrap: wrap;
   margin: 0 auto;
   padding: 2rem 0;
+
+  @media (max-width: 768px) {
+    padding: 7rem 0;
+  }
 
   h1 {
     color: #fff;
