--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -10,6 +10,10 @@
   background-color: #000;
   color: white;
 
+  @media (max-width: 576px) {
+    display: none;
+  }
+
   ul {
     display: flex;
     flex-direction: column;
@@ -21,5 +25,38 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+  }
+}
+
+.bottom-bar {
+  background-color: #000;
+  position: absolute;
+  display: none;
+  bottom: 0;
+  padding: 2rem;
+  width: 100%;
+
+  @media (max-width: 576px) {
+    display: block;
+  }
+}
+
+.bottom-bar-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+
+  ul {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+  }
+
+  li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5px;
   }
 }
