--- a/src/components/ThisIsArtist/ThisIsArtist.module.scss
+++ b/src/components/ThisIsArtist/ThisIsArtist.module.scss
@@ -15,6 +15,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  @media (max-width: 1080px) {
+    justify-content: center;
+  }
   gap: 1.5rem;
 }
 
