--- a/src/components/TopArtists/TopArtists.module.scss
+++ b/src/components/TopArtists/TopArtists.module.scss
@@ -14,6 +14,10 @@
 .top-artists {
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 1080px) {
+    justify-content: center;
+  }
   flex-wrap: wrap;
   row-gap: 1.5rem;
   column-gap: 2rem;
