--- a/src/pages/AlbumDetails/AlbumDetails.module.scss
+++ b/src/pages/AlbumDetails/AlbumDetails.module.scss
@@ -5,6 +5,11 @@
 
   padding-top: 2rem;
   color: #fff;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .album-info {
@@ -13,7 +18,11 @@
   gap: 0.5rem;
 
   h1 {
-    font-size: 5rem;
+    font-size: 4rem;
+
+    @media (max-width: 992px) {
+      font-size: 3rem;
+    }
   }
 
   p {
@@ -31,6 +40,7 @@
 
 .song {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   gap: 5rem;
 
