--- a/src/pages/Artist/Artist.module.scss
+++ b/src/pages/Artist/Artist.module.scss
@@ -3,6 +3,11 @@
   align-items: center;
   gap: 5rem;
 
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
   margin: 2rem 0;
   padding: 2rem 0;
   width: 100%;
@@ -10,8 +15,7 @@
   color: #fff;
 
   img {
-    border-radius: 100%;
-    height: 100%;
+    border-radius: 50%;
   }
 
   h1 {
@@ -22,7 +26,7 @@
 .artist-info {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 
   p {
     font-size: 1.15rem;
@@ -33,6 +37,8 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
+  padding: 4rem 0;
   color: #fff;
 
   p {
@@ -52,16 +58,33 @@
 .track {
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 768px) {
+    justify-content: center;
+
+    span {
+      display: none;
+    }
+  }
+}
+
+.section-albums {
+  display: flex;
+  flex-direction: column;
+  padding: 3rem 0;
+  gap: 2rem;
+
+  color: #fff;
 }
 
 .card-container {
   display: flex;
   gap: 2rem;
-
   flex-wrap: wrap;
-  margin: 0 auto;
-  padding: 4rem 0;
 
+  @media (max-width: 576px) {
+    justify-content: center;
+  }
   h1 {
     color: #fff;
   }
