--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -30,10 +30,10 @@
 
 .bottom-bar {
   background-color: #000;
-  position: absolute;
+  position: fixed;
   display: none;
   bottom: 0;
-  padding: 2rem;
+  padding: 1.25rem;
   width: 100%;
 
   @media (max-width: 576px) {
