--- a/src/pages/Artist/Artist.module.scss
+++ b/src/pages/Artist/Artist.module.scss
@@ -5,7 +5,7 @@
 
   @media (max-width: 768px) {
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
   }
 
   margin: 2rem 0;
@@ -25,8 +25,13 @@
 
 .artist-info {
   display: flex;
+  align-items: center;
   flex-direction: column;
   gap: 1rem;
+
+  h1 {
+    font-size: 2.5rem;
+  }
 
   p {
     font-size: 1.15rem;
@@ -38,11 +43,13 @@
   flex-direction: column;
   gap: 2rem;
 
-  padding: 4rem 0;
+  @media (max-width: 768px) {
+    padding: 5rem 0;
+  }
+
   color: #fff;
 
   p {
-    padding: 0.25rem 4rem;
     font-size: 1.25rem;
   }
 }
@@ -53,18 +60,23 @@
   gap: 1rem;
 
   padding: 0.25rem 3rem;
+
+  @media (max-width: 768px) {
+    padding: 0;
+  }
 }
 
 .track {
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  gap: 2rem;
 
   @media (max-width: 768px) {
-    justify-content: center;
-
     span {
       display: none;
     }
+    justify-content: initial;
   }
 }
 
