--- a/src/pages/Artist/Artist.module.scss
+++ b/src/pages/Artist/Artist.module.scss
@@ -44,7 +44,7 @@
   gap: 2rem;
 
   @media (max-width: 768px) {
-    padding: 5rem 0;
+    padding: 2rem 0;
   }
 
   color: #fff;
@@ -83,7 +83,7 @@
 .section-albums {
   display: flex;
   flex-direction: column;
-  padding: 3rem 0;
+  padding: 3rem 0 8rem 0;
   gap: 2rem;
 
   color: #fff;
